<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/display_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/num_area"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/operation"
            android:theme="@style/ResultStyle"
            android:layout_weight="1.0"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/resultat"
            android:layout_weight="1.0"
            android:theme="@style/ResultStyle"
            />

    </LinearLayout>


        
    <TableLayout
        android:id="@+id/num_area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="3"
        android:rowCount="4"
        android:stretchColumns="*"

        app:layout_constraintTop_toBottomOf="@id/display_area"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/operator_area"
        app:layout_constraintWidth_percent=".75"
        app:layout_constraintHeight_percent="0.7"
        >

        <TableRow
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/number1"
                android:text="@string/nombre_1"
                style="@style/NumberButtonStyle"
                />

            <Button
                android:id="@+id/number2"
                android:text="@string/nombre_2"
                style="@style/NumberButtonStyle"
                />

            <Button
                android:id="@+id/number3"
                android:text="@string/nombre_3"
                style="@style/NumberButtonStyle"
                />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/number4"
                android:text="@string/nombre_4"
                style="@style/NumberButtonStyle"
                />

            <Button
                android:id="@+id/number5"
                android:text="@string/nombre_5"
                style="@style/NumberButtonStyle"
                />

            <Button
                android:id="@+id/number6"
                android:text="@string/nombre_6"
                style="@style/NumberButtonStyle"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/number7"
                android:text="@string/nombre_7"
                style="@style/NumberButtonStyle"
                />

            <Button
                android:id="@+id/number8"
                android:text="@string/nombre_8"
                style="@style/NumberButtonStyle"
                />

            <Button
                android:id="@+id/number9"
                android:text="@string/nombre_9"
                style="@style/NumberButtonStyle"
                />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/comma"
                android:text="@string/comma"
                style="@style/NumberButtonStyle"
                />

            <Button
                android:id="@+id/number0"
                android:text="@string/nombre_0"
                style="@style/NumberButtonStyle"
                />

            <Button
                android:id="@+id/save"
                android:text="@string/save"
                style="@style/NumberButtonStyle"
                />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/operator_area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"

        app:layout_constraintLeft_toRightOf="@id/num_area"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display_area"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.7"
        >

        <Button
            android:id="@+id/opDel"
            android:text="@string/action_sup"
            style="@style/OperatorButtonStyle"
            />

        <Button
            android:id="@+id/opDiv"
            android:text="@string/action_div"
            style="@style/OperatorButtonStyle"
            />

        <Button
            android:id="@+id/opMult"
            android:text="@string/action_mult"
            style="@style/OperatorButtonStyle"
            />

        <Button
            android:id="@+id/opMin"
            android:text="@string/action_min"
            style="@style/OperatorButtonStyle"
            />

        <Button
            android:id="@+id/opAdd"
            android:text="@string/action_add"
            style="@style/OperatorButtonStyle"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
